--- a/Booking/booking.html
+++ b/Booking/booking.html
@@ -18,6 +18,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js"></script>
 
     <div id="top" class="border-box">
       <div class="border-box">
@@ -39,7 +40,7 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
-              class="bi bi-check-circle-fill progress-check "
+              class="bi bi-check-circle-fill progress-check"
               viewBox="0 0 16 16"
             >
               <path
@@ -54,7 +55,7 @@
             <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="currentColor"
-              class="bi bi-2-circle-fill"
+              class="bi bi-2-circle-fill progress-check"
               viewBox="0 0 16 16"
             >
               <path
@@ -97,32 +98,219 @@
               />
             </svg>
           </span>
-          <span> Payment </span>
-        </div>
-        <div class="progress-elems">
-          <span>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              class="bi bi-4-circle-fill"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M7.519 5.057c-.886 1.418-1.772 2.838-2.542 4.265v1.12H8.85V12h1.26v-1.559h1.007V9.334H10.11V4.002H8.176c-.218.352-.438.703-.657 1.055ZM6.225 9.281v.053H8.85V5.063h-.065c-.867 1.33-1.787 2.806-2.56 4.218Z"
-              />
-            </svg>
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="currentColor"
-              class="bi bi-check-circle-fill progress-check invisible"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"
-              />
-            </svg>
-          </span>
           <span> Complete </span>
+        </div>
+      </div>
+    </div>
+    <div id="body">
+      <div id="forms">
+        <div id="traveller-form" class="container">
+          <p class="form-heading">
+            <span
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                class="bi bi-suitcase-lg-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M7 0a2 2 0 0 0-2 2H1.5A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14H2a.5.5 0 0 0 1 0h10a.5.5 0 0 0 1 0h.5a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2H11a2 2 0 0 0-2-2zM6 2a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1zM3 13V3h1v10zm9 0V3h1v10z"
+                /></svg></span
+            >Traveller Details
+          </p>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Firstname" class="col-form-label">Firstname*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Firstname"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Lastname" class="col-form-label">Lastname*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Lastname"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Phone" class="col-form-label">Phone*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="number"
+                id="Phone"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Email" class="col-form-label">Email*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="email"
+                id="Email"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Country" class="col-form-label">Country*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Country"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Address" class="col-form-label">Address*</label>
+            </div>
+            <div class="col-9">
+              <textarea
+                class="form-control"
+                id="Address"
+                rows="3"
+                required
+              ></textarea>
+            </div>
+          </div>
+        </div>
+        <div id="billing-form">
+
+          <p class="form-heading">
+            <span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="currentColor"
+                class="bi bi-receipt"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M1.92.506a.5.5 0 0 1 .434.14L3 1.293l.646-.647a.5.5 0 0 1 .708 0L5 1.293l.646-.647a.5.5 0 0 1 .708 0L7 1.293l.646-.647a.5.5 0 0 1 .708 0L9 1.293l.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .708 0l.646.647.646-.647a.5.5 0 0 1 .801.13l.5 1A.5.5 0 0 1 15 2v12a.5.5 0 0 1-.053.224l-.5 1a.5.5 0 0 1-.8.13L13 14.707l-.646.647a.5.5 0 0 1-.708 0L11 14.707l-.646.647a.5.5 0 0 1-.708 0L9 14.707l-.646.647a.5.5 0 0 1-.708 0L7 14.707l-.646.647a.5.5 0 0 1-.708 0L5 14.707l-.646.647a.5.5 0 0 1-.708 0L3 14.707l-.646.647a.5.5 0 0 1-.801-.13l-.5-1A.5.5 0 0 1 1 14V2a.5.5 0 0 1 .053-.224l.5-1a.5.5 0 0 1 .367-.27m.217 1.338L2 2.118v11.764l.137.274.51-.51a.5.5 0 0 1 .707 0l.646.647.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.646.646.646-.646a.5.5 0 0 1 .708 0l.509.509.137-.274V2.118l-.137-.274-.51.51a.5.5 0 0 1-.707 0L12 1.707l-.646.647a.5.5 0 0 1-.708 0L10 1.707l-.646.647a.5.5 0 0 1-.708 0L8 1.707l-.646.647a.5.5 0 0 1-.708 0L6 1.707l-.646.647a.5.5 0 0 1-.708 0L4 1.707l-.646.647a.5.5 0 0 1-.708 0z"
+                />
+                <path
+                  d="M3 4.5a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 1 1 0 1h-6a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5m8-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 0 1h-1a.5.5 0 0 1-.5-.5"
+                />
+              </svg> </span
+            >Billing Details
+          </p>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="formcheck">
+            <label class="form-check-label" for="formcheck">
+              The same as contact details
+            </label>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Firstname1" class="col-form-label">Firstname*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Firstname1"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Lastname1" class="col-form-label">Lastname*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Lastname1"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Phone1" class="col-form-label">Phone*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="number"
+                id="Phone1"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Email1" class="col-form-label">Email*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="email"
+                id="Email1"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Country1" class="col-form-label">Country*</label>
+            </div>
+            <div class="col-9">
+              <input
+                type="text"
+                id="Country1"
+                class="form-control"
+                aria-describedby="passwordHelpInline"
+                required
+              />
+            </div>
+          </div>
+          <div class="row g-3 align-items-center form-element">
+            <div class="col-3">
+              <label for="Address1" class="col-form-label">Address*</label>
+            </div>
+            <div class="col-9">
+              <textarea
+                class="form-control"
+                id="Address1"
+                rows="3"
+                required
+              ></textarea>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
