--- a/About/about.html
+++ b/About/about.html
@@ -59,18 +59,58 @@
         </svg> -->
         <span class="material-symbols-outlined">
           lock
-          </span>
+        </span>
         <p>Login</p>
       </a>
       <a href="#" class="log signup">
         <span class="material-symbols-outlined">
           person
-          </span>
+        </span>
         <p>Sign Up</p>
       </a>
     </div>
   </div>
-  <div class="nav-bar-bottom">
+  <div class="nav-bar-bottom sticky-top">
+    <div class="nav-bottom">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" id="logo-img" href="#"><img src="./images/logo1.png" alt="logo" height="45px"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item ">
+              <a class="nav-link text-dark mr-5 font-weight-bold" href="#">HOME</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle mr-5 text-dark font-weight-bold" href="#" id="navbarDropdown"
+                role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                BOOKING
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="#">Domestic Trip</a>
+                <a class="dropdown-item" href="#">International Trip</a>
+                <!-- <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a> -->
+              </div>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link text-dark font-weight-bold" href="#">ABOUT</a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link text-dark font-weight-bold" href="#">DESTINATION</a>
+            </li>
+            <li class="nav-item mr-5">
+              <a class="nav-link text-dark font-weight-bold" href="#">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </div>
+
+  <div class="container">
 
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
