--- a/About/about.html
+++ b/About/about.html
@@ -2,11 +2,9 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -20,7 +18,6 @@
   <div id="nav-bar-top">
     <div class="social-contact">
       <div class="nav-contact">
-        <!-- <i class="fa fa-envelope" style="font-size:24px">jklklkjl</i> -->
         <a href="tel:+91 3900550220"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
             class="bi bi-telephone" viewBox="0 0 16 16">
             <path
@@ -52,11 +49,6 @@
     </div>
     <div class="login-signup">
       <a href="#" class="log login">
-        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="25" height="22" fill="currentColor" class="bi bi-lock"
-          viewBox="0 0 16 16">
-          <path
-            d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2m3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2M5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1" />
-        </svg> -->
         <span class="material-symbols-outlined">
           lock
         </span>
@@ -91,8 +83,6 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Domestic Trip</a>
                 <a class="dropdown-item" href="#">International Trip</a>
-                <!-- <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a> -->
               </div>
             </li>
             <li class="nav-item mr-5">
@@ -110,7 +100,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div id="container">
 
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
