--- a/About/about.html
+++ b/About/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="nav-bar.css">
+  <link rel="stylesheet" href="body.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet"
@@ -75,7 +76,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item ">
-                <a class="nav-link text-dark mr-5 font-weight-bold" href="#">HOME</a>
+                <a class="nav-link text-dark mr-5 font-weight-bold" href="../index.html">HOME</a>
+              </li>
+              <li class="nav-item mr-5">
+                <a class="nav-link text-dark font-weight-bold" href="../Destination/destination.html">DESTINATION</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle mr-5 text-dark font-weight-bold" href="#" id="navbarDropdown"
@@ -83,23 +87,26 @@
                   BOOKING
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Domestic Trip</a>
+                  <a class="dropdown-item" href="../Booking/booking.html">Domestic Trip</a>
                   <a class="dropdown-item" href="#">International Trip</a>
                 </div>
               </li>
               <li class="nav-item mr-5">
-                <a class="nav-link text-dark font-weight-bold" href="#">ABOUT</a>
+                <a class="nav-link text-dark font-weight-bold" href="#">ABOUT US</a>
               </li>
               <li class="nav-item mr-5">
-                <a class="nav-link text-dark font-weight-bold" href="#">DESTINATION</a>
-              </li>
-              <li class="nav-item mr-5">
-                <a class="nav-link text-dark font-weight-bold" href="#">CONTACT</a>
+                <a class="nav-link text-dark font-weight-bold" href="../Contact/contact.html">CONTACT US</a>
               </li>
             </ul>
           </div>
         </nav>
       </div>
+    </div>
+    <div class="about-us">
+      <!-- <div class="about-us-text-info"> -->
+        <h1>About US</h1>
+        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+      <!-- </div> -->
     </div>
   </div>
   <div class="about-hero">
