--- a/Destination/destination.html
+++ b/Destination/destination.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<link rel="stylesheet" href="destination.css">
 <body>
-    
+ 
+<header>
+   <div id="destination-backimage">
+    <h1 class="Destination-content1" style="opacity: 1;">Destinations</h1>
+    <h4 class="Destination-content2">Explore Tours By Destination</h4>
+
+   </div>
+
+   <!--  card section -->
+   <div id="card-container"></div>
+</header>
+
+
+
+<script src="destination.js"></script>
 </body>
 </html>
