--- a/footer/footer.html
+++ b/footer/footer.html
@@ -1,43 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="footer.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=DM+Sans:opsz,wght@9..40,300;9..40,400&family=DM+Serif+Display&family=Jost:wght@600&family=Lato:wght@700&family=Poppins:wght@300&family=Raleway&family=Roboto:ital,wght@0,300;0,500;1,300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
+
 <body>
     <!-- Footer -->
     <footer>
-      <div class="footer-child-1">
-        <div>
-            <h3>Call Us</h3>
-            <p> +6-345-3456-233</p>
-            <h3>Email</h3>
-            <p>Ask@traveltourtheme.com</p>
+        <div class="footer-child-1">
+            <div>
+                <h3>Call Us</h3>
+               <p> <span class="material-symbols-outlined" style="font-size: 20px;">call</span> +6-345-3456-233</p>
+                <h3>Email</h3>
+                <p>Ask@banjara.com</p>
+            </div>
+            <div>
+                <h3>About Us</h3>
+                <a href=""><p>Our Story</p></a>
+                <a href=""><p>Travel Blog & Tips</p></a>
+                <a href=""><p>Working With Us</p></a>
+                <a href=""><p>Be Our Partner</p></a>
+            </div>
+            <div>
+                <h3>Support</h3>
+                <a href=""><p>Customer Support</p></a>
+                <a href=""><p>Privacy & Policy</p></a>
+                <a href=""><p>Contact Channels</p></a>
+            </div>
+            <div>
+                <h3>Pay Safely With Us</h3>
+                <p>The payment is encrypted and<br> transmitted securely with an SSL<br> protocol.</p>
+                <div id="debit-card">
+                    <img src="Debit-card/visa.png" alt="">
+                    <img src="Debit-card/Mastercard.png" alt="">
+                    <img src="Debit-card/ae.png" alt="">
+                    <img src="Debit-card/jcb.png" alt="">
+                </div>
+            </div>
         </div>
-        <div>
-            <h3>About Us</h3>
-            <p>Our Story</p>
-            <p>Travel Blog & Tips</p>
-            <p>Working With Us</p>
-            <p>Be Our Partner</p>
+        <div class="footer-child-2">
+            <div>
+                <p>© 2023 Travel Tour All Rights Reserved.</p>
+            </div>
+            <div id="follow-us">
+                <div>
+                    <p>Follow Us On </p>
+                </div>
+                <div id="follow-us-img">
+                    <a href=""><img src="Social-icon/facebook.png" alt=""></a>
+                    <a href=""><img src="Social-icon/twitter.png" alt=""></a>
+                    <a href=""><img src="Social-icon/instagram.png" alt=""></a>
+                    <a href=""><img src="Social-icon/linkedin.png" alt=""></a>
+                    <a href=""><img src="Social-icon/pinterest.png" alt=""></a>
+                    <a href=""><img src="Social-icon/youtube.png" alt=""></a>
+                </div>
+            </div>
         </div>
-        <div>
-            <h3>Support</h3>
-            <p>Customer Support</p>
-            <p>Privacy & Policy</p>
-            <p>Contact Channels</p>
-        </div>
-        <div>
-            <h3>Pay Safely With Us</h3>
-            <p>The payment is encrypted and<br> transmitted securely with an SSL<br> protocol.</p>
-        </div>
-      </div>
-      <div class="footer-child-2">
-        <div><p>© 2023 Travel Tour All Rights Reserved.</p></div>
-        <div><p>Follow Us On 2222222222222222222222222    </p></div>
-      </div>
     </footer>
 </body>
+
 </html>
