--- a/Booking/about.html
+++ b/Booking/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="nav-bar.css">
+  <link rel="stylesheet" href="../footer/footer.css">
   <link rel="stylesheet" href="body.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -50,13 +51,13 @@
         </div>
       </div>
       <div class="login-signup">
-        <a href="#" class="log login">
+        <a href="#" class="logi login">
           <span class="material-symbols-outlined">
             lock
           </span>
           <p>Login</p>
         </a>
-        <a href="#" class="log signup">
+        <a href="#" class="logi signup">
           <span class="material-symbols-outlined">
             person
           </span>
@@ -140,7 +141,9 @@
                     <p class="card-name">John Snow</p>
                     <p class="card-pos">CEO, Founder</p>
                     <p class="card-quote">“</p>
-                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.”</p>
+                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and
+                      Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast
+                      of the Semantics, a large language ocean.”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -149,7 +152,9 @@
                     <p class="card-name">John Snow</p>
                     <p class="card-pos">CEO, Founder</p>
                     <p class="card-quote">“</p>
-                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.”</p>
+                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and
+                      Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast
+                      of the Semantics, a large language ocean.”</p>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -158,7 +163,9 @@
                     <p class="card-name">John Snow</p>
                     <p class="card-pos">CEO, Founder</p>
                     <p class="card-quote">“</p>
-                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.”</p>
+                    <p class="card-para">“Far far away, behind the word mountains, far from the countries Vokalia and
+                      Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast
+                      of the Semantics, a large language ocean.”</p>
                   </div>
                 </div>
               </div>
@@ -214,6 +221,71 @@
         <button>Get started</button>
       </div>
     </div>
+    <footer>
+      <div class="footer-child-1">
+        <div>
+          <h3>Call Us</h3>
+          <p> <span class="material-symbols-outlined" style="font-size: 20px;">call</span> +6-345-3456-233</p>
+          <h3>Email</h3>
+          <p>Ask@banjara.com</p>
+        </div>
+        <div>
+          <h3>About Us</h3>
+          <a href="">
+            <p>Our Story</p>
+          </a>
+          <a href="">
+            <p>Travel Blog & Tips</p>
+          </a>
+          <a href="">
+            <p>Working With Us</p>
+          </a>
+          <a href="">
+            <p>Be Our Partner</p>
+          </a>
+        </div>
+        <div>
+          <h3>Support</h3>
+          <a href="">
+            <p>Customer Support</p>
+          </a>
+          <a href="">
+            <p>Privacy & Policy</p>
+          </a>
+          <a href="">
+            <p>Contact Channels</p>
+          </a>
+        </div>
+        <div>
+          <h3>Pay Safely With Us</h3>
+          <p>The payment is encrypted and<br> transmitted securely with an SSL<br> protocol.</p>
+          <div id="debit-card">
+            <img src="../footer/Debit-card/visa.png" alt="">
+            <img src="../footer/Debit-card/Mastercard.png" alt="">
+            <img src="../footer/Debit-card/ae.png" alt="">
+            <img src="../footer/Debit-card/jcb.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="footer-child-2">
+        <div>
+          <p>© 2023 Travel Tour All Rights Reserved.</p>
+        </div>
+        <div id="follow-us">
+          <div>
+            <p>Follow Us On </p>
+          </div>
+          <div id="follow-us-img">
+            <a href=""><img src="../footer/Social-icon/facebook.png" alt=""></a>
+            <a href=""><img src="../footer/Social-icon/twitter.png" alt=""></a>
+            <a href=""><img src="../footer/Social-icon/instagram.png" alt=""></a>
+            <a href=""><img src="../footer/Social-icon/linkedin.png" alt=""></a>
+            <a href=""><img src="../footer/Social-icon/pinterest.png" alt=""></a>
+            <a href=""><img src="../footer/Social-icon/youtube.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </div>
   <script src="script.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
