--- a/Destination/destination.html
+++ b/Destination/destination.html
@@ -1,69 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="destination.css">
-<link rel="stylesheet" href="footer1.css">
+
+
+
+
 <body>
 
 
 
 
-<header>
-   <div id="destination-backimage">
-    <h1 class="Destination-content1" style="opacity: 1;">Destinations</h1>
-    <h4 class="Destination-content2">Explore Tours By Destination</h4>
 
-   </div>
+<!--  end navbar -->
 
-   <!--  card section -->
-   <div id="card-container"></div>
-</header>
 
-<!--   -->
+    <header>
+        <div id="destination-backimage">
+            <h1 class="Destination-content1">DESTINATIONS</h1>
+            <h4 class="Destination-content2">Explore Tours By Destination</h4>
 
-<!--      footer  -->
+        </div>
 
- <!-- Footer -->
- <footer>
-    <div class="footer-child-1">
-      <div>
-          <h3>Call Us</h3>
-          <p> +6-345-3456-233</p>
-          <h3>Email</h3>
-          <p>Ask@traveltourtheme.com</p>
-      </div>
-      <div>
-          <h3>About Us</h3>
-          <p>Our Story</p>
-          <p>Travel Blog & Tips</p>
-          <p>Working With Us</p>
-          <p>Be Our Partner</p>
-      </div>
-      <div>
-          <h3>Support</h3>
-          <p>Customer Support</p>
-          <p>Privacy & Policy</p>
-          <p>Contact Channels</p>
-      </div>
-      <div>
-          <h3>Pay Safely With Us</h3>
-          <p>The payment is encrypted and<br> transmitted securely with an SSL<br> protocol.</p>
-      </div>
-    </div>
-    <div class="footer-child-2">
-      <div><p>© 2023 Travel Tour All Rights Reserved.</p></div>
-      <div><p>Follow Us On 2222222222222222222222222    </p></div>
-    </div>
-  </footer>
+        <!--  card section -->
+        <div id="card-container"></div>
+        </header>
+
+
+        <!--  country card  -->
+        <hr>
+<h1 style="text-align: center; font-size: 35px; margin: 25px;">Continent Wise Country</h1>
+        <div id="countrycardcontainer"></div>
 
 
 
 
 
-<script src="destination.js"></script>
+        <script src="destination.js"></script>
 </body>
+
 </html>
