--- a/Booking/booking.html
+++ b/Booking/booking.html
@@ -10,6 +10,8 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./footer.css">
+
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./navbar.css" />
     <!-- navbar cssssssssss -->
@@ -817,5 +819,60 @@
     ></script> -->
 
     <!-- Body................. -->
+
+
+    <!-- footer..... -->
+    <footer>
+      <div class="footer-child-1">
+          <div>
+              <h3>Call Us</h3>
+             <p> <span class="material-symbols-outlined" style="font-size: 20px;">call</span> +6-345-3456-233</p>
+              <h3>Email</h3>
+              <p>Ask@banjara.com</p>
+          </div>
+          <div>
+              <h3>About Us</h3>
+              <a href=""><p>Our Story</p></a>
+              <a href=""><p>Travel Blog & Tips</p></a>
+              <a href=""><p>Working With Us</p></a>
+              <a href=""><p>Be Our Partner</p></a>
+          </div>
+          <div>
+              <h3>Support</h3>
+              <a href=""><p>Customer Support</p></a>
+              <a href=""><p>Privacy & Policy</p></a>
+              <a href=""><p>Contact Channels</p></a>
+          </div>
+          <div>
+              <h3>Pay Safely With Us</h3>
+              <p>The payment is encrypted and<br> transmitted securely with an SSL<br> protocol.</p>
+              <div id="debit-card">
+                  <img src="./Debit-card/visa.png" alt="">
+                  <img src="./Debit-card/Mastercard.png" alt="">
+                  <img src="./Debit-card/ae.png" alt="">
+                  <img src="./Debit-card/jcb.png" alt="">
+              </div>
+          </div>
+      </div>
+      <div class="footer-child-2">
+          <div>
+              <p>© 2023 Travel Tour All Rights Reserved.</p>
+          </div>
+          <div id="follow-us">
+              <div>
+                  <p>Follow Us On </p>
+              </div>
+              <div id="follow-us-img">
+                  <a href=""><img src="./Social-icon/facebook.png" alt=""></a>
+                  <a href=""><img src="./Social-icon/twitter.png" alt=""></a>
+                  <a href=""><img src="./Social-icon/instagram.png" alt=""></a>
+                  <a href=""><img src="./Social-icon/linkedin.png" alt=""></a>
+                  <a href=""><img src="./Social-icon/pinterest.png" alt=""></a>
+                  <a href=""><img src="./Social-icon/youtube.png" alt=""></a>
+              </div>
+          </div>
+      </div>
+  </footer>
+  <!-- footer......... -->
   </body>
 </html>
