--- a/Booking/booking.html
+++ b/Booking/booking.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="./footer.css">
 
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./navbar.css" />
+    <!-- <link rel="stylesheet" href="./navbar.css" /> -->
+    <link rel="stylesheet" href="../About/nav-bar.css">
     <!-- navbar cssssssssss -->
     <link
       rel="stylesheet"
@@ -109,7 +110,7 @@
         </div>
       </div>
       <div class="login-signup">
-        <a href="#" class="log login">
+        <a href="#" class="logi login">
           <!-- <svg xmlns="http://www.w3.org/2000/svg" width="25" height="22" fill="currentColor" class="bi bi-lock"
           viewBox="0 0 16 16">
           <path
@@ -121,7 +122,7 @@
             Login
           </button>
         </a>
-        <a href="#" class="log signup">
+        <a href="#" class="logi signup">
           <span class="material-symbols-outlined"> person </span>
           <!-- <p>Sign Up</p> -->
           <button class="btn" data-toggle="modal" data-target="#SignUpModal">
@@ -135,7 +136,7 @@
       <div class="nav-bottom">
         <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" id="logo-img" href="../index.html"
-            ><img src="logo1.png" alt="logo" height="45px"
+            ><img src="../About/images/logo1.png" alt="logo" height="45px"
           /></a>
           <button
             class="navbar-toggler"
