home page structure complete

--- a/About/about.html
+++ b/About/about.html
@@ -484,7 +484,7 @@
             <p>Our Story</p>
           </a>
           <a href="">
-            <p>Travel Blog & Tips</p>
+            <p>Travel Blog &amp; Tips</p>
           </a>
           <a href="">
             <p>Working With Us</p>
@@ -499,7 +499,7 @@
             <p>Customer Support</p>
           </a>
           <a href="">
-            <p>Privacy & Policy</p>
+            <p>Privacy &amp; Policy</p>
           </a>
           <a href="">
             <p>Contact Channels</p>
