new updates in home

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
      <section class="home" id="home">
      <div class="content" >
         <h3>Banjara</h3>
-        <p>A way of life..</p>
+        <p>A way of life...</p>
       </div>
     <div class="controls">
       <span class="vid-btn active" data-src="homeImages/vid-1.mp4"></span>
