--- a/Booking/booking.html
+++ b/Booking/booking.html
@@ -390,7 +390,7 @@
     <!-- Body.............. -->
 
     <div id="top" class="border-box">
-      <div class="border-box">
+      <div class="border-box" id="destination-dynamic-text">
         <span id="destination"> Book Your Destination </span>
       </div>
       <div id="progress" class="border-box">
